General code cleanup from inspections and replace some deprecated usages with non deprecated versions